
Todo:
   - Add file/directory copy
   - Ensure all failures 404 and don't toss errors.
   - Preserve the line ending when doing an update.(forces \n now)
   - Make grouped actions work for delete.

Revision history

1.0.0-rc1 Wed Jun 17 22:40:26 CDT 2009:
	- Added utils.py to have common utilities.
    - Rename, Make directory, Move, Upload, update
    - Made the directory selector sort properly
    - Delete works. 
    - Create new file works. 
    - Split permissions to file/directories vs objects
	- Fix templates to look like the default admin.
    - Files to delete link to the live site.
    - Fixed all url names to be "admin_file_manger_<aciton>" to make the
	  possiblity of url clash smaller.
    - Added permission checks to templates.